fix(components): update grid-gap to column-gap

--- a/packages/components/src/components/dropdown/_dropdown.scss
+++ b/packages/components/src/components/dropdown/_dropdown.scss
@@ -24,7 +24,7 @@
   .#{$prefix}--dropdown__wrapper--inline {
     display: inline-grid;
     align-items: center;
-    grid-gap: rem(24px);
+    column-gap: rem(24px);
     grid-template: auto auto / auto min-content;
 
     .#{$prefix}--label {
